# Gelina

./: .gitignore  .gitmodules  README.md  install.sh  preprocess_requirements.txt  pyproject.toml
configs/: eval.yaml
configs/cfm/: default.yaml  default_jz.yaml  infer.yaml  infer_segments.yaml  infer_streaming.yaml
configs/cfm/cfm/: default.yaml
configs/cfm/datamodule/: beat_latents.yaml  beat_latents_jz.yaml  old_beat_latents.yaml
configs/cfm/experiment/: l1_loss.yaml  old_latents.yaml  rec_loss.yaml  streaming.yaml  streaming_32.yaml  uncond.yaml  vel_loss.yaml
configs/gelina/: default.yaml  infer.yaml
configs/lina/: default.yaml  infer_segments.yaml
configs/others/: global_vq.yml
configs/preprocess/: asr_dataset.yaml  generate_latents.yaml  push_dataset_hf.yaml  tokenize_audio.yaml  tokenize_motion.yaml
configs/vq/: default.yaml
launch/: eval_sim_r.sh  infer.sh  infer_lina.sh  train_cfm.sh  train_gelina.sh  train_gelina_jz-a100.sh  train_gelina_jz-h100.sh  train_gematcha_jz-a100.sh  train_gematcha_jz-h100.sh  train_lina.sh  train_lina_jz-a100.sh  train_lina_jz-h100.sh  train_vq.sh
launch/preprocessing/: all.sh  asr.sh  generate_latents.sh  tokenize_motion.sh  tokenizer.sh
scripts/eval/: evaluate_from_folder.py  nmos.py  sim_prompt.py  sim_r.py
scripts/inference/: clone_segments_cfm.py  streaming_infere_cfm.py  vanilla_infere_cfm.py
scripts/preprocessing/: asr.py  beat_hf.py  generate_latent_dataset.py  tokenize_audio.py  tokenize_motion.py
scripts/train/: train_cfm.py  train_gelina.py  train_lina.py  train_vq.py
(+15 files in other folders)
